--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 
 <body>
+  <form>
+    <input type="text" id="search" placeholder="Search GIFS">
+    <button>Submit</button>
+  </form>
 
 <script src="https://unpkg.com/jquery"></script>
 <script src="https://unpkg.com/axios/dist/axios.js"></script>
