--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <button>Submit</button>
   </form>
 
+  <div id="gif-container">
+    <button id="remove-gifs">X</button>
+  </div>
+
+
 <script src="https://unpkg.com/jquery"></script>
 <script src="https://unpkg.com/axios/dist/axios.js"></script>
 <script src="app.js"></script>
